--- a/style.css
+++ b/style.css
@@ -8,6 +8,9 @@ body {
   background-attachment: fixed;
   color: white;
   font-family: "Neuton", serif;
+  max-width: 1080px;
+  margin: 0 auto !important;
+  float: none !important;
 }
 
 .center {
